--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
             <header class="header header-inline min-h-3 row desktop-12 container" role="banner">
 
                 <div class="site-logo">
-                    <h1><a href="/" rel="home">EventIF</h1>
+                    <h1><a href="{%url 'home'%}" rel="home">EventIF</h1>
                     <p class="site-description screen-reader-only">O maior encontro dos IFs do mundo!</p>
                 </div>
 
@@ -34,10 +34,10 @@
                     <a href="javascript:void(0);" class="nav-mobile"><i class="fa fa-bars"></i></a>
                     <ul>
                         <li><a data-scroll href="/contato">Contato</a></li>
-                        <li><a data-scroll href="/#overview">Conferência</a></li>
-                        <li><a data-scroll href="/#sponsors">Patrocinadores</a></li>
-                        <li><a data-scroll href="/#register">Inscrição</a></li>
-                        <li><a data-scroll href="/#venue">Local</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#overview">Conferência</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#sponsors">Patrocinadores</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#register">Inscrição</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#venue">Local</a></li>
                     </ul>
                 </nav>
 
