--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
             <header class="header header-inline min-h-3 row desktop-12 container" role="banner">
 
                 <div class="site-logo">
-                    <h1><a href="/" rel="home">EventIF</a></h1>
+                    <h1><a href="{%url 'home'%}" rel="home">EventIF</a></h1>
                     <p class="site-description screen-reader-only">O maior encontro dos IFs do mundo!</p>
                 </div>
 
@@ -46,10 +46,10 @@
                     <a href="javascript:void(0);" class="nav-mobile"><i class="fa fa-bars"></i></a>
                     <ul>
                         <li><a data-scroll href="/contato">Contato</a></li>
-                        <li><a data-scroll href="#overview">Conferência</a></li>
-                        <li><a data-scroll href="#sponsors">Patrocinadores</a></li>
-                        <li><a data-scroll href="#register">Inscrição</a></li>
-                        <li><a data-scroll href="#venue">Local</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#overview">Conferência</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#sponsors">Patrocinadores</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#register">Inscrição</a></li>
+                        <li><a data-scroll href="{%url 'home'%}#venue">Local</a></li>
                     </ul>
                 </nav>
 
@@ -70,7 +70,7 @@
             	<i class="fa fa-5x fa-globe"></i>
             	<h2>A Conferência</h2>
                 <p class="lead">A maior reunião de hackers do mundo.<br>Reunindo profissionais e entusiastas dos quatro <br>cantos do planeta, o <em>EventIF</em> é o lugar onde você precisa estar.</p>
-            	<p><a class="btn-basic btn-green" data-scroll href="#register">Garanta a sua vaga!</a></p>
+            	<p><a class="btn-basic btn-green" data-scroll href="{%url 'home'%}#register">Garanta a sua vaga!</a></p>
             </div>
         </section>
 
@@ -111,7 +111,7 @@
                 <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
                 	<h2>Inscrição</h2>
                 	<h3>Inscrições abertas!</h3>
-                	<a class="btn-basic btn-green" href="/inscricao/">Inscreva-se Já!</a>
+                	<a class="btn-basic btn-green" href="{%url 'subscriptions:new'%}">Inscreva-se Já!</a>
                 </div>
             </div>
         </section>
